# rust_c_interop

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
include/: rust_c_interop.h
src/: lib.rs  main.rs
